--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -57,3 +57,9 @@ figcaption
   &-c2
     background-color: #DCF1E5
     border-radius: 15px
+  &-c3
+    background-image: url(../assets/curso/tema1/img2.svg)
+    background-repeat: repeat-x
+    background-position: center
+    @media screen and ( max-width: $bp-max-sm )
+      background-repeat: repeat
