--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -48,6 +48,16 @@ figcaption
 .banner-interno__fondo
   background-image: url("../assets/curso/portada/img1.png") !important
 
+.bloque-texto-g.color-primario
+  background-color: #E2DACC
+
+.tarjeta.tarjeta--azul
+  background-color: #F3F0EA
+.tarjeta.tarjeta--azul.acordion__activo
+  background-color: #DCF1E5
+.acordion__accion__btn--a
+  background-color: $color-acento-botones
+
 .bg
   &-c1
     background-image: url(../assets/curso/intro/img1.png)
@@ -63,3 +73,25 @@ figcaption
     background-position: center
     @media screen and ( max-width: $bp-max-sm )
       background-repeat: repeat
+  &-c4
+    background-color: #E2DACC
+    border-radius: 15px
+  &-c5
+    background-color: #A9DCBE
+    border-top-left-radius: 15px
+    border-bottom-left-radius: 15px
+    @media screen and ( max-width: $bp-max-lg )
+      border-bottom-left-radius: 0px
+      border-top-right-radius: 15px
+  &-c6
+    background-color: #DCF1E5
+  &-c7
+    background-color: #DCF1E5
+    border-top-right-radius: 15px
+    border-bottom-right-radius: 15px
+    @media screen and ( max-width: $bp-max-lg )
+      border-top-right-radius: 0px
+      border-bottom-left-radius: 15px
+  &-c8
+    background-color: #A9DCBE
+  
