--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -58,6 +58,20 @@ figcaption
 .acordion__accion__btn--a
   background-color: $color-acento-botones
 
+.lista-ul--color li > i:first-of-type
+  color: #8F6C69
+
+.tarjeta-audio.color-acento-contenido
+  border-color: #BF908C
+  background-color: #FDFBEF
+.tarjeta-audio.color-acento-contenido .tarjeta-audio__texto
+  color: $color-sistema-texto
+.audio.color-acento-contenido .audio__btn, .tarjeta-audio.color-acento-contenido .audio__btn, .tarjeta-dialogo.color-acento-contenido .audio__btn
+  background-color: #BF908C
+
+.tabla-a thead
+  background-color: #FCF8DE
+
 .bg
   &-c1
     background-image: url(../assets/curso/intro/img1.png)
@@ -94,4 +108,35 @@ figcaption
       border-bottom-left-radius: 15px
   &-c8
     background-color: #A9DCBE
-  
+  &-c9
+    background-image: url(../assets/curso/tema2/img1.png)
+    background-repeat: no-repeat
+    background-size: cover
+    margin-inline: -3.2rem !important
+  &-c10
+    background-color: #8F6C69
+  &-c11
+    background-color: #706C65
+  &-c12
+    background-color: #F8E1DF
+  &-c13
+    background-color: #EEF8F2
+  &-c14
+    background-color: #668472
+    border-radius: 15px
+  &-c15
+    background-color: #F8F0BC
+  &-c16
+    background-color: #DCF1E5
+    border-radius: 15px
+    transition: all 0.3s ease-in-out
+  &-c16:hover
+    background-color: #E2DACC
+  &-c17
+    background-color: #E2DACC
+  &-c18
+    background-color: #F8F0BC
+    border-radius: 15px
+    transition: all 0.3s ease-in-out
+  &-c18:hover
+    background-color: #E2DACC
